# neon

./: .gitignore  AGENTS.md  ALTERNATIVE_APPROACH.md  AOC_MISSING_FEATURES.md  AOC_ORCHESTRATION_GUIDE.md  CLAUDE.md  Cargo.toml  DEBUGGER_VERIFICATION.md  LICENSE  MACRO_REFACTOR_INSTRUCTIONS.md  README.md  REFACTOR_PLAN.md  WASM.md  aoc32.n  app.n  build-wasm.sh  calculator.n  config.n  debug_test.n  demo.n  example_advanced.n  example_main.n  example_math.n  for_edge_cases.neon  klabnik-adr-workflow.md  logger.n  minimal_test.neon  relative_demo.n  simple_for.neon  simple_test.neon  test_anonymous.neon  test_file.neon  test_for_loop.n  test_for_loop.neon  test_for_loop_correct.neon  test_functions.n  test_interp.neon  test_math.n  test_native_print.n  test_semantic_args.rs  (+3 more)
.beads/: beads.db  config.yaml  issues.jsonl  last-touched
.claude/: ORCHESTRATION.md  QUICK-START.md  README.md  settings.json
.github/: copilot-instructions.md
.opencode/: opencode.json
benchmarks/: README.md  fib.n  fib.py  loops.n  loops.py  primes.n  primes.py  run.sh
docs/: TREE_SITTER.md
examples/: command_line_args.neon  day1_solution.n  else_if_demo.n  for_loop_demo.neon  http_server.ne  http_server_api.neon  http_server_basic.neon  maps_and_sets_demo.neon  test_math.neon
lib/: helpers.n
src/: block.rs  lib.rs  macros.rs  main.rs  mod.n  neon.n  wasm.rs
tests/: chunk_binary_compilation_test.rs  file_io_test.rs  module_tests.rs  neon_scripts.rs  verify_command_updates.sh
tree-sitter-neon/: CHANGELOG.md  CONTRIBUTING.md  HIGHLIGHTING.md  LICENSE  PHASE5_REPORT.md  README.md  RELEASE.md  TESTING.md  benchmark.sh  binding.gyp  grammar.js  package.json  (+6 more)
(+394 files in other folders)
