[package]
name = "neon"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
colored = "3.0.0"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-attributes = { version = "0.1.30", features = [] }
tracing-subscriber = "0.3.19"
env_logger = "0.11.8"
log = "0.4.27"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
datatest-stable = "0.3.3"

[[test]]
name = "neon_scripts"
harness = false

[features]
disassemble = []